--- a/data/team.yml
+++ b/data/team.yml
@@ -1,8 +1,24 @@
-anne:
-  img: anne.jpg
-
 seb:
+  owner_name: Sebastien Saunier
+  picture: card-paris.jpg
   img: seb.jpg
-
+  name: Seb's home
+  summary: Charming room in Montmartre
+  city: Paris, France
+  wifi: true
 romain:
+  owner_name: Romain Paillard
+  picture: card-london.jpeg
   img: romain.jpg
+  name: Romain's home
+  summary: Nice flat in Piccadilly
+  city: London, UK
+  wifi: false
+anne:
+    owner_name: Anne
+    picture: card-brussels.jpeg
+    img: anne.jpg
+    name: Anne's home
+    summary: Lovely house
+    city: Brussels, Belgium
+    wifi: true
